# newbeebot

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  WORKFLOW.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/blueprint/: 00_index.md  01_agentos_reference_architecture.md  02_agentos_design_dimensions.md  03_agentos_core_abstractions.md  04_agentos_design_tradeoffs.md  05_agentos_for_work_scenarios.md  06_agentos_implementation_principles.md
docs/execution/: 00_repo_audit.md  01_parallel_task_graph.md  02_module_ownership.md  03_interface_freeze_plan.md  04_mvp_execution_order.md  05_agent_task_prompts.md  06_bootstrap_status.md  07_task_board.md  08_troubleshooting.md
docs/implementation/: 00_index.md  01_repo_structure.md  02_module_breakdown.md  03_interfaces_and_contracts.md  04_mvp_build_plan.md  05_test_strategy.md  06_risk_register.md  07_first_tasks.md
docs/plans/: 2026-03-13-newbeebot-execution-bootstrap.md  2026-03-13-single-src-restructure.md
docs/system-design/: 00_index.md  01_system_scope_and_goals.md  02_context_view.md  03_container_view.md  04_component_view.md  05_domain_model.md  06_runtime_scenarios.md  07_state_and_session_model.md  08_tool_and_extension_model.md  09_security_and_trust_boundaries.md  10_configuration_and_operability.md  11_deployment_view.md  12_codebase_mapping.md  13_architectural_decisions_and_tradeoffs.md  14_reusable_agentos_blueprint.md  15_reimplementation_plan.md  16_open_questions.md
libs/: README.md
scripts/: bootstrap.sh  check.sh  run_cli.sh
src/channels/: cli.py  (+2 more)
(+49 files in other folders)
