[project]
name = "newbeebot-dev"
version = "0.1.0"
description = "Contract-first monorepo bootstrap for newbeebot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=0.26.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.11.0",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = [
  "src",
]
exclude = ["docs/"]
